# f1-led-circuit-simulation-20-cars

./: Cargo.toml  led_coords.csv  modified_race_data.csv  old_race_data.csv  race_data.csv  time_delta_albon.csv  time_delta_albon_start.csv  time_delta_alonso.csv  time_delta_alonso_start.csv  time_delta_bottas.csv  time_delta_bottas_start.csv  time_delta_gasley.csv  time_delta_gasley_start.csv  time_delta_guanyu.csv  time_delta_guanyu_start.csv  time_delta_hamilton.csv  time_delta_hamilton_start.csv  time_delta_hulkenberg.csv  time_delta_hulkenberg_start.csv  time_delta_lawson.csv  time_delta_lawson_start.csv  time_delta_leclerc.csv  time_delta_leclerc_start.csv  time_delta_magnussen.csv  time_delta_magnussen_start.csv  time_delta_norris.csv  time_delta_norris_start.csv  time_delta_ocon.csv  time_delta_ocon_start.csv  time_delta_perez.csv  time_delta_perez_start.csv  time_delta_piastri.csv  time_delta_piastri_start.csv  time_delta_russell.csv  time_delta_russell_start.csv  time_delta_sainz.csv  time_delta_sainz_start.csv  time_delta_sargeant.csv  time_delta_sargeant_start.csv  time_delta_stroll.csv  (+6 more)
src/: main.rs
